tests/tooling/fixtures/native/execution/negative/conditional_missing_then_statement.objc3
module ConditionalMissingThenStatement;

fn main() -> i32 {
  if (1)
  else
    return 1;
  return 0;
}
